--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap');
+
 body {
+  padding:20px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inconsolata', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Inconsolata', monospace;
+}
+
+#body{
+  font-family: 'Inconsolata', monospace;
+}
+
+.ascii-art {
+  font-family: monospace;
+  white-space: pre;
+}
+
+.searchbar {
+  color: white;
+}
+
+input {
+  border: none; /* Removes the default border */
+  color: white;
+  -webkit-appearance: none;
+  background: #111;
+}
+
+input:focus {
+  outline: none; /* Removes the border when the input is clicked */
+  -webkit-appearance: none;
 }
